// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Snapshot should match variant="default" 1`] = `
.c2 {
  position: relative;
  text-rendering: optimizeLegibility;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #4F7F90;
  font-size: 0.9rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  margin: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > * {
  margin: 0.125rem 0 !important;
}

.c0 > *:first-child {
  margin-top: 0 !important;
}

.c0 > *:last-child {
  margin-bottom: 0 !important;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  visibility: hidden;
}

.c3 {
  font-size: 0.75rem;
  line-height: 1.2rem;
  font-weight: 700;
  color: #19586E;
}

.c4 {
  font-size: 0.6875rem;
  line-height: 1.2rem;
  color: #19586E;
  visibility: hidden;
  min-height: 1.25rem;
}

<div
  class="sc-AxjAm c0"
>
  <div
    class="sc-AxjAm c1"
  >
    <label
      class="c2 c3"
      for="Input"
    />
  </div>
  <label
    class="c2 c4"
  />
</div>
`;

exports[`Field Snapshot should match variant="error" 1`] = `
.c2 {
  position: relative;
  text-rendering: optimizeLegibility;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #4F7F90;
  font-size: 0.9rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  margin: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > * {
  margin: 0.125rem 0 !important;
}

.c0 > *:first-child {
  margin-top: 0 !important;
}

.c0 > *:last-child {
  margin-bottom: 0 !important;
}

.c0 .c3,
.c0 .sc-AxgMl {
  color: #5A1007;
}

.c0 .c5 {
  color: #E12712;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  visibility: hidden;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1.2rem;
  font-weight: 700;
  color: #19586E;
}

.c6 {
  font-size: 0.6875rem;
  line-height: 1.2rem;
  color: #19586E;
  visibility: visible;
  min-height: 1.25rem;
}

<div
  class="sc-AxjAm c0"
>
  <div
    class="sc-AxjAm c1"
  >
    <label
      class="c2 c3 c4"
      for="Input"
    />
  </div>
  <label
    class="c2 c5 c6"
  >
    Something went wrong
  </label>
</div>
`;

exports[`Field Snapshot should match variant="success" 1`] = `
.c2 {
  position: relative;
  text-rendering: optimizeLegibility;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #4F7F90;
  font-size: 0.9rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  margin: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > * {
  margin: 0.125rem 0 !important;
}

.c0 > *:first-child {
  margin-top: 0 !important;
}

.c0 > *:last-child {
  margin-bottom: 0 !important;
}

.c0 .c3,
.c0 .sc-AxgMl {
  color: #124829;
}

.c0 .c5 {
  color: #2CB567;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  visibility: hidden;
}

.c4 {
  font-size: 0.75rem;
  line-height: 1.2rem;
  font-weight: 700;
  color: #19586E;
}

.c6 {
  font-size: 0.6875rem;
  line-height: 1.2rem;
  color: #19586E;
  visibility: visible;
  min-height: 1.25rem;
}

<div
  class="sc-AxjAm c0"
>
  <div
    class="sc-AxjAm c1"
  >
    <label
      class="c2 c3 c4"
      for="Input"
    />
  </div>
  <label
    class="c2 c5 c6"
  >
    Everything is alright
  </label>
</div>
`;
